# cool

./: README.rst  requirements.txt  setup.cfg  test-requirements.txt
cool/: parser.py  utils.py
