[metadata]
name = cool
summary = A really cool cloud butler.
description-file =
    README.rst
author = GoDaddy Developers
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: System :: Distributed Computing

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cool

[nosetests]
cover-erase = true
verbosity = 2

[pbr]
warnerrors = True

[wheel]
universal = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
